--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
                     <div class="navbar-nav mx-auto py-0">
                         <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#feature" class="nav-item nav-link">Feature</a>
-                        <a href="#pricing" class="nav-item nav-link">Pricing</a>
+                        <a href="#feature" class="nav-item nav-link">Skill</a>
+                        <a href="#pricing" class="nav-item nav-link">Work</a>
+                        <a href="#pricing" class="nav-item nav-link">Travel</a>
                         <a href="#review" class="nav-item nav-link">Review</a>
                         <a href="#contact" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Start Free Trial</a>
+                    <a href="https://techiesanjaypathak.github.io/codeSnippet" class="btn btn-primary-gradient rounded-pill py-2 px-4 ms-3 d-none d-lg-block">My Blog</a>
                 </div>
             </nav>
 
@@ -69,10 +70,11 @@
                 <div class="container px-lg-5">
                     <div class="row g-5">
                         <div class="col-lg-8 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated slideInDown">The Revolutionary App That Helps To Control Your Own Fitness</h1>
-                            <p class="text-white pb-3 animated slideInDown">Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem</p>
-                            <a href="" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
-                            <a href="" class="btn btn-secondary-gradient py-sm-3 px-4 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
+                            <h1 class="text-white mb-4 animated slideInDown">iOS App Developer | Swift Expert | Passionate about Mobile Development</h1>
+                            <p class="text-white pb-3 animated slideInDown">Hi, I'm Sanjay Pathak, an iOS app developer with over 10 years of experience in creating intuitive and high-performance apps.
+                                I specialize in Swift, UIKit, and SwiftUI, and I have a passion for delivering seamless user experiences.</p>
+                            <a href="https://techiesanjaypathak.github.io/readMore" class="btn btn-primary-gradient py-sm-3 px-4 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
+                            <a href="https://techiesanjaypathak.github.io/contactMe" class="btn btn-secondary-gradient py-sm-3 px-4 px-sm-5 rounded-pill animated slideInRight">Contact Me</a>
                         </div>
                         <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp" data-wow-delay="0.3s">
                             <div class="owl-carousel screenshot-carousel">
