--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- var appScheme = 'idrivecrm://';  // Your custom URL scheme (replace with your app's scheme)
+    var appStoreUrl = 'https://apps.apple.com/us/app/idrive-crm/id1672260637';  // Your App Store URL -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,34 +42,35 @@
 
     <script>
         window.onload = function() {
-            var appScheme = 'idrivecrm://';  // Your custom URL scheme (replace with your app's scheme)
-            var appStoreUrl = 'https://apps.apple.com/us/app/idrive-crm/id1672260637';  // Your App Store URL
+            var appScheme = 'idrivecrm://';  // Replace with your app's custom URL scheme
+            var appStoreUrl = 'https://apps.apple.com/us/app/idrive-crm/id1672260637';  // Replace with your App Store URL
 
             // Start time to measure if the app opens
             var startTime = Date.now();
 
-            // Attempt to access the custom URL scheme to infer if the app is installed
+            // Try using Universal Links or Custom URL Scheme (like myapp://) to detect if the app is installed
             var iframe = document.createElement('iframe');
             iframe.style.display = 'none';
-            iframe.src = appScheme;
+            iframe.src = appScheme;  // Attempt to open the app using a custom scheme
 
-            // Attach the iframe to the body (this will trigger the app opening attempt)
+            // Append iframe to body to initiate app detection
             document.body.appendChild(iframe);
 
-            // Set up a timeout to check after a brief period if the app was opened
+            // Timeout to check if the app was opened
             setTimeout(function() {
                 var elapsedTime = Date.now() - startTime;
 
+                // If the app opens in the background within 2 seconds, show the message
                 if (elapsedTime < 2000) {
-                    // If the app opened within 2 seconds, it means the app is installed
-                    document.getElementById('appMessage').style.display = 'block';  // Show the message "App is installed"
+                    // App opened within timeout, show the "App installed" message
+                    document.getElementById('appMessage').style.display = 'block'; 
                 } else {
-                    // If more time passed, assume the app is not installed
-                    document.getElementById('appStoreButton').style.display = 'inline-block';  // Show the App Store button
+                    // If no app opened within timeout, assume it's not installed and show the button
+                    document.getElementById('appStoreButton').style.display = 'inline-block';
                 }
-            }, 2000);  // 2-second delay to check if the app is opened
+            }, 2000); // 2-second timeout
 
-            // Cleanup the iframe after 2.5 seconds
+            // Cleanup iframe after the timeout
             setTimeout(function() {
                 document.body.removeChild(iframe);
             }, 2500);
@@ -74,4 +78,3 @@
     </script>
 </body>
 </html>
-
