Checking if app is installed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-itunes-app" content="app-id=1672260637, app-argument=idrivecrm">
     <title>Check if App is Installed</title>
     <style>
         #appStoreButton {
